FIX: field of form in snapchat did full width on mobile

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -1190,6 +1190,7 @@ select {
 .field-symbol-currency {
   position: relative;
   flex: 1;
+  width: 100%;
 
   &:before {
     content: "$";
